Hero page finir section 2

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
               <li><a href="">Mission</a></li>
             </div>
             <div>
+              <li><a href="">Partenaire</a></li>
+            </div>
+
+            <div>
               <li><a href="">Contact</a></li>
             </div>
           </ul>
@@ -59,35 +63,39 @@
     <section class="hero-section">
       <div class="block-hero-image">
         <img
-          src="/images/Téléchargez Gratuitement des Vecteurs, Photos et Vidéos.jpeg"
+          src="/images/Télés.jpg"
           alt=""
         />
       </div>
 
       <div class="hero-info">
-        <div class="hero-image">
-          <img src="/images/pngegg(7).png" alt="" />
-        </div>
         <div class="info-div">
           <div class="info">
-            <span>Mise ne place</span>
-            <h1>TogoSchool</h1>
+            <div>
+              <div><span>Mise ne place</span></div>
+              <h1>TogoSchool</h1>
+            </div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
-              aspernatur ratione sapiente illum dolores
+              aspernatur ratione sapiente illum dolores aspernatur ratione sapiente illum dolores aspernatur ratione sapiente illum dolores
             </p>
           </div>
 
           <!-- <button></button> de télechargement -->
 
-          <div class="buttonhero">
+          <div class="button-hero">
             <div class="appstor">
-              <button><i class="fa-brands fa-apple"></i></button>
+              <button>App Store <i class="fa-brands fa-apple"></i></button>
             </div>
             <div class="playstore">
-              <button><i class="fa-brands fa-google-play"></i></button>
+              <button> Play Srore  <i class="fa-brands fa-google-play"></i></button>
             </div>
           </div>
+
+        </div>
+
+        <div class="hero-image">
+          <img src="/images/Smartphone_iphone_14_pro_max_mockup_png-removebg-preview.png" alt="" />
         </div>
       </div>
     </section>
